# ChangeLog for app-misc/gourmet
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/gourmet/ChangeLog,v 1.40 2014/03/08 21:36:20 nixphoeni Exp $

*gourmet-0.17.0 (08 Mar 2014)

  08 Mar 2014; Joe Sapp <nixphoeni@gentoo.org> +gourmet-0.17.0.ebuild,
  +files/no-docs-0.17.0.patch:
  Version bump

*gourmet-0.16.1-r3 (09 Feb 2014)

  09 Feb 2014; Joe Sapp <nixphoeni@gentoo.org> +gourmet-0.16.1-r3.ebuild,
  +files/gourmet-0.16.1-pictures-dir.patch:
  Add patch to fix adding pictures in "oddball WMs" per bug #489974 (thanks
  m0par)

*gourmet-0.16.1-r2 (19 Nov 2013)

  19 Nov 2013; Joe Sapp <nixphoeni@gentoo.org> -gourmet-0.16.1.ebuild,
  -gourmet-0.16.1-r1.ebuild, +gourmet-0.16.1-r2.ebuild,
  +files/gourmet-0.16.1-PIL-png.patch, metadata.xml:
  Fix deps according to https://lists.launchpad.net/gourmet/msg00008.html; add
  dependency on dev-python/elib-intl; add patch to address incomplete
  support for PIL; add some USE flags; remove old versions of 0.16.1

*gourmet-0.16.1-r1 (05 Nov 2013)

  05 Nov 2013; Joe Sapp <nixphoeni@gentoo.org> +gourmet-0.16.1-r1.ebuild,
  +files/desktop-entry.patch, +files/no-docs.patch,
  +files/nutritional-db-fix.patch, metadata.xml:
  Update dependencies; fix some more runtime-specific directories; add 'web'
  and 'spell' USE flags; add support for Python 2.6

*gourmet-0.16.1 (17 Sep 2013)

  17 Sep 2013; Patrick Lauer <patrick@gentoo.org> +gourmet-0.16.1.ebuild:
  Bump for #484528 #471492

  16 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due #79409

  12 May 2013; Mike Gilbert <floppym@gentoo.org> gourmet-0.15.9.ebuild:
  Remove dependency on pysqlite.

  21 Jan 2013; Joe Sapp <nixphoeni@gentoo.org> gourmet-0.15.9.ebuild,
  metadata.xml:
  Updated HOMEPAGE, SRC_URI, and metadata

  14 Jul 2011; Pacho Ramos <pacho@gentoo.org> -gourmet-0.15.7-r1.ebuild,
  -gourmet-0.15.8.ebuild, gourmet-0.15.9.ebuild: