@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX desktop-entry.patch 291 SHA256 cc1e41d9a426639bc19465d0dbd6b6b041643a8eccdd4a98665f3b27723b0a60 SHA512 f93f41082a6483828dd9c579c00f3b4c39574370d76954223f9b1b17663bab389b941461dfa3c7aa82c045b97d1a326791b3ed8ea6bcafad17bb879db068aff7 WHIRLPOOL 6c08c0ef0afded0072d8cd251488c6c19f7e96c7a8252401d1c3ed22404425e739beb16175a15fc51cd52647a398462e640bd232ebbcdf9ef23b5562f0549596
 AUX gourmet-0.16.1-PIL-png.patch 957 SHA256 8b2d92bfe6ced6d5872f78dca60b246f4beca812aba37d2cf56bfffa061e1491 SHA512 08c3db118c733d85b82abf042e55c038f4c778cdd5c0d5860d43161dc878ee66fb16dfb5ca7a2ef9c6ffce17f66d6bffd1c6835e42e38e9c349d1497841b47da WHIRLPOOL e5789ea68e40939911aacfb269777368863af81e5f7ca874176cd6803717189a6a3eb8603480baa314939b9a6105f7340ffd6cfe885e9cb92faf18960e570ac9
 AUX gourmet-0.16.1-pictures-dir.patch 640 SHA256 2d7b773e8f552f4cd101b8580ad5d5abfbc38eb2bded9efdb5beafd1d67e43d0 SHA512 877000079a3b6d4228acfd8cfdb39209b7a48d4ae927608f70311885b3b70f1d93fd2be64a51d46d29f53dbbcf2511c3e5a4749830c55606918a03ebc8c9c03b WHIRLPOOL 4d9cf9e9e2e89e892d42385d844baf757596557d035a25e7539fbe2a95ea73e3c3177a4e25823aa12196c4655e18bb345cf3bb934c68584b187f9d12fe7e9edf
@@ -7,9 +10,22 @@ AUX nutritional-db-fix.patch 1608 SHA256 cfd71eb5d89defde7019837b12105dca1617028
 DIST gourmet-0.15.9.tar.gz 3933250 SHA256 a1d101a497bd573bbc3c05c4398a6e9db7d7393427128c60d0cd832596b91b8c SHA512 4eb437606feb69339c38220dd54f4eff06fda8b1d36922fa9a5638f5aac686336889e2c9be90a094af25fe5bc8e29e5f3434ac804a1a704ab262bcef3d7de315 WHIRLPOOL 90c97f02d4b6fed139ed1f5a6deaf63c416ddc73802d1909cee45c446140473b6b87ffbe310b25c128719deebedf53d8644656f129b8528e241ffe50b26d60aa
 DIST gourmet-0.16.1.tar.gz 11130774 SHA256 860b88d2dd0f952fb10e07497877579ab5ad75d0ea45c32058b7f80233a3b107 SHA512 d0df893d289209ee292cf3702671b5d8b04f3367e65e2d7323de4cfe71286cfa14d02d0e9fa63d6afd7bb511251ca43555ecc61a9da05f6197beba20d72dd737 WHIRLPOOL e51dd6aeb68430e064aee672d350bbf74c0935b22216c30a8a89d5ea48804c5ef173cb13534aade658f1d95a784f3cd3815eb98affc00e36343f55facd76d2ad
 DIST gourmet-0.17.0.tar.gz 8499938 SHA256 d2e0f8fee4b9da9200359ece038cc052768de8c16593afc195ba14b6fa2b108d SHA512 3583ab5428550b2833f05b6280e14f88e8e9c86f214db6da70775b8c1ffc07db26bd2a928f3eabd906fa0c55ea614fd7756586044428c71c81742cd872324477 WHIRLPOOL 08b6c4554c35feb74b3fc1f6e7c12001ecc5ad198bbffbe75776abb93f4ce57e311801e7e7869d7b65190a562854c42ba2c8b8f221a85c48e0981d7dd776a06f
+DIST gourmet-0.17.2.tar.gz 8495468 SHA256 c8ed94fb73f1b5c7fb27f13bb2228f37c1183d75c527ec169cae1d1928fce1c6 SHA512 4ec85c39fc5b78371ebd1ad8020c612c33de224dbe55edb0fa681b581cc312bdab417fcb776da9eb93861845046fe9b61b8476ef81aabd1e68b4f56435cf880a WHIRLPOOL 350fa49b36952c2d1a80d9181a3c95019ed6a2bcdff411bdd17c2302bc3f3e2feeef53db80292d371f2ff303acb1f0a06d81f10c3855cb1c3a5f8c5ed1699714
 EBUILD gourmet-0.15.9.ebuild 1281 SHA256 2299cfc502af372daaa644a8f942910635ed579714bb0a2d0b6667dd9a17ef41 SHA512 152665b1e7fb14dbb406f1a0ce3c2a90883fcea3d8daf175e902023371b774bc4dd63820074082d0d8fc6064da35bcad9afa648006506136972457e416beaa56 WHIRLPOOL 2b9ed126a00621ec6af4fba4335b145faef0b00f337eb281e48f1101b934d75128458538b05bfad5261f0b9253bf492041acba9e4a90b314e37b200621a3f475
 EBUILD gourmet-0.16.1-r2.ebuild 2555 SHA256 229695e7a140d7104b911d69eeda2f7e3103177e72fa943a77025b4780f19474 SHA512 ecadac68263bbb3c156b96f34b923a3f6ef19f225347417146ea5632e7c838039bd49b6a48759226e90c65e54d12ff74322b74e81cff6194b3ff953501a55e72 WHIRLPOOL 97c2a45edb96f2a9caf654da7aa4266de04b3e403236c005fc262065f252af7bd0b47e57f26149045949c1ff3699240e59f0c1ee7c6f873be592d3ec93824104
 EBUILD gourmet-0.16.1-r3.ebuild 2594 SHA256 0d6a7119e30467c7b36594d2eb6282ad893e5949a3b451a7a772d4faf4965bae SHA512 1f30ceafebd7769b6e5fcb2afd94a9c865b1fa356528c38be604a34180eeb7d0a3b9eb1e227168cc67f08e7c474bf653a81e89044ced77527da4330d5e86b42d WHIRLPOOL 1a5dab07c77127e69ff7f3ca847aafb29aecc6dc5fc775279f4f9f0d050d266acaf29186d9d7b4a666253eff23f2ed38e714768be3c8c00f618ffa7b6816740b
 EBUILD gourmet-0.17.0.ebuild 2415 SHA256 b2e8c9da04ac155072d4c4bda5d3c427783ed7e1e641fa62cdddc4fb6f8555b4 SHA512 a200a8bcbe9cac5059f52911b71e2707704cd9209c2f25dd0cde176417e695eeb0d217d24e2c62839ba6d7032162a4b433d2c94d8b32b07846b1e9f3a695e04a WHIRLPOOL 2937fa5b78c48e616e587b430142ed98c617d3a79126bf530637090d660a7de78f01f846c18fd4102a71f767e4b648c60f569a0afb3fd5d494dca9d46dd1d36d
-MISC ChangeLog 6970 SHA256 7f8b4c164051cc9c7faf8d5f81179ae3c692b1ef4d2d26947be42bf1e3d1bcd3 SHA512 2531822d4ba7fe037a23c0b8e08011a3caee7ec13daf0f3637fb3ac3e6015292b0887125dbc7d094439513a3ce5b66fe9ef6b8dd3bb62ddf8a1ed7b51c79b8c8 WHIRLPOOL 7867b595d2e1c16d8daa0f2d64544e3742ed75ea05cfdf507233188cbbf38986292fcca28482aaa33d2d195374071e871651e36d8f68407db32f189f915f070d
+EBUILD gourmet-0.17.2.ebuild 2419 SHA256 9e309b5ffb59c3afa095c5e934896ecbe3cef74498d5f4645a22e045966d247a SHA512 c65e3192c522cad8cd1405d82d668ebe96a5255cd558e207579d8f4d9bba61f6be3e245318dd3195dfcb2dab328b5945e4967e55f3b0701be7fe0f7b7b342375 WHIRLPOOL 6c7f1aa9d4510b4d55496d4654c9e0b10aaf6dbf7662874166a1d5e32cbd6c1fafb72895e86721d14b6aaa80933cdbb8d7b1c405df533d64916664726d87935e
+MISC ChangeLog 7088 SHA256 1ab2b9e8f13ebc7bd70928b1f408e48331a34db4d4d611ba5a8b4ce9b3aade05 SHA512 5ac3147175708f13bd298331d6ebef5f4c23a0e8f9eaf0296226fb480ce2da9f5af74e064d6ef89a2d29d4870f7b903b25a0bfb73f5e588f577e8080ad9c44d0 WHIRLPOOL 6884e92f1018b63b6363c5a6562d3466211cf1eef99fb750dce482d30befd6be5d72295f9a03f3ea0dbcc3af044dbbd1a0bd1437dc9f9b31cdcf01b11c451fbe
 MISC metadata.xml 1967 SHA256 409d0c3364eb936d8aec1510e000703dc3e19487039ac1eecce197e88cecd028 SHA512 b6c47e3eea07aac5c52037942bcb4bbceaf0c19aace11459c0969ba2540cec16d4fa8d035e5f221f4fe1aa1d9239e844033b1cd80ff69297c33c5209dbfe2e3b WHIRLPOOL 77797968405fc50548e568ddbb1dcac37534f3ff55d61d86f0eb70a931e6daaae8f04261ed8a610b7add19695e9a62c16313e2225e7c17e8814097446b3f6706
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEcBAEBCAAGBQJTQcrsAAoJEFCXUso0HYgl2xcH/0+1C+RW/sbbm4mx0hfbYbyb
+bkViAxyMEDSaV80bFJ0alY10H4dFVs5WcVfooe32jR6EcjXwtThxr5XMFLItMQwk
+LPmEeKJZeQkfshoyX1DPZm8VBfS5gmKzM78xULmRmNsGA7AHeE5nf2ual/BzV0ji
+/kfrpoCg3FsLxSRSZZaIjeZfupYDPjIi1JxvJjhps8mG8xpOoVoXmU6TvvTSgFMd
+xsnjGx6hHttGQipZ8PWHhpNbNpNZ/1VPnIseNRPKjiSH8I2aYSnvC4GsZQDel3D9
+vEF+LHMpIin5peoX5J8gVNqDo1t8F/OZPL59Cyu8Im8SUdgJNP92Eps1/Jl8dso=
+=El/G
+-----END PGP SIGNATURE-----
