@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=>=dev-python/pygtk-2.22.0:2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/sqlalchemy-0.7.9-r1[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] i18n? ( dev-python/elib-intl[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ipython? ( >=dev-python/ipython-0.13.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) pdf? ( >=dev-python/reportlab-2.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/python-poppler-0.12.1-r4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) print? ( >=dev-python/reportlab-2.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/python-poppler-0.12.1-r4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) spell? ( dev-python/gtkspell-python ) sound? ( >=dev-python/gst-python-0.10.22-r1:0.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) web? ( >=dev-python/beautifulsoup-3.2.1-r1:python-2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) dev-util/intltool >=dev-python/python-distutils-extra-2.37-r1[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] userland_GNU? ( >=sys-apps/coreutils-8.5 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[sqlite] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+DESCRIPTION=Recipe Organizer and Shopping List Generator for Gnome
+EAPI=5
+HOMEPAGE=http://thinkle.github.com/gourmet/
+IUSE=-i18n -ipython pdf print spell sound web python_targets_python2_7
+KEYWORDS=~amd64 ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-python/pygtk-2.22.0:2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/sqlalchemy-0.7.9-r1[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] virtual/python-imaging[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] i18n? ( dev-python/elib-intl[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ipython? ( >=dev-python/ipython-0.13.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) pdf? ( >=dev-python/reportlab-2.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/python-poppler-0.12.1-r4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) print? ( >=dev-python/reportlab-2.6[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/python-poppler-0.12.1-r4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) spell? ( dev-python/gtkspell-python ) sound? ( >=dev-python/gst-python-0.10.22-r1:0.10[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) web? ( >=dev-python/beautifulsoup-3.2.1-r1:python-2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[sqlite] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
+REQUIRED_USE=|| ( python_targets_python2_7 )
+SLOT=0
+SRC_URI=https://github.com/thinkle/gourmet/archive/0.17.2.tar.gz -> gourmet-0.17.2.tar.gz
+_eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	53a3a670d39942b0879f95cb17ecb4a1	python-utils-r1	18d8279a3382bf4453e7ff35208ce907	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=6e7f5bee4712f68bb07d47b5fa06ed04
